Fix misspelled image name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       _JAVA_OPTIONS: "-Xmx3g"
       GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
     docker:
-      - image: circleci/openjdk:8u181-jdk-strech
+      - image: circleci/openjdk:8u181-jdk-stretch
     steps:
       - checkout
       - restore_cache:
