--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,33 @@
-version: 2
-jobs:
-  build:
-    environment:
-      _JAVA_OPTIONS: "-Xmx3g"
-      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
-    docker:
-      - image: circleci/openjdk:8u181-jdk-stretch
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
-      - restore_cache:
-          key: v1-gradle-cache-{{ checksum "build.gradle" }}
-      - run:
-          name: Build
-          command: |
-            if [ "$CIRCLE_NODE_INDEX" == 0 ]; then
-              ./gradlew assemble
-            fi
-      - save_cache:
-          paths:
-            - ~/.gradle/wrapper
-          key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
-      - save_cache:
-          paths:
-            - ~/.gradle/caches
-          key: v1-gradle-cache-{{ checksum "build.gradle" }}
-workflows:
-  version: 2
-  workflow:
-    jobs:
-      - build
+#version: 2
+#jobs:
+#  build:
+#    environment:
+#      _JAVA_OPTIONS: "-Xmx3g"
+#      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
+#    docker:
+#      - image: circleci/openjdk:8u181-jdk-stretch
+#    steps:
+#      - checkout
+#      - restore_cache:
+#          key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
+#      - restore_cache:
+#          key: v1-gradle-cache-{{ checksum "build.gradle" }}
+#      - run:
+#          name: Build
+#          command: |
+#            if [ "$CIRCLE_NODE_INDEX" == 0 ]; then
+#              ./gradlew assemble
+#            fi
+#      - save_cache:
+#          paths:
+#            - ~/.gradle/wrapper
+#          key: v1-gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
+#      - save_cache:
+#          paths:
+#            - ~/.gradle/caches
+#          key: v1-gradle-cache-{{ checksum "build.gradle" }}
+#workflows:
+#  version: 2
+#  workflow:
+#    jobs:
+#      - build
