--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -18,11 +18,11 @@ version="${file.jarVersion}" #mandatory
  # A display name for the mod
 displayName="Metalus" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
-# updateJSONURL="http://myurl.me/" #optional
+updateJSONURL="http://myurl.me/" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
-# displayURL="http://example.com/" #optional
+displayURL="http://example.com/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-# logoFile="examplemod.png" #optional
+logoFile="metalus.png" #optional
 # A text field displayed in the mod UI
 credits="Mojang, MCP, and Forge Teams" #optional
 # A text field displayed in the mod UI
@@ -44,7 +44,7 @@ Metalus is a metallurgy mod for Minecraft!
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.examplemod]]
+[[dependencies.metalus]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.14.4]"
